--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "chromatic"
   },
   "dependencies": {
     "axios": "^1.3.0",
@@ -40,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.17.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-plugin-storybook": "^0.6.10",
