--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,55 +1,24 @@
 {
-	"root": true,
-	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
-	"rules": {
-		"semi": "on",
-		"@typescript-eslint/semi": ["warn"],
-		"@typescript-eslint/no-empty-interface": [
-			"error",
-			{
-				"allowSingleExtends": true
-			}
-		]
-	},
-	"extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended"]
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "semi": "off",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off",
+    "@typescript-eslint/semi": ["warn"],
+    "@typescript-eslint/no-empty-interface": [
+      "error",
+      {
+        "allowSingleExtends": true
+      }
+    ]
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:storybook/recommended",
+    "plugin:storybook/recommended"
+  ]
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-// {
-//  "root": true,
-//  "parser": "@typescript-eslint/parser",
-//  "plugins": [
-//   "@typescript-eslint"
-//  ],
-//  "rules": {
-//   "semi": "off",
-//   "@typescript-eslint/semi": [
-//    "warn"
-//   ],
-//   "@typescript-eslint/no-empty-interface": [
-//    "error",
-//    {
-//     "allowSingleExtends": true
-//    }
-//   ]
-//  },
-//  "extends": [
-//   "eslint:recommended",
-//   "plugin:@typescript-eslint/eslint-recommended",
-//   "plugin:@typescript-eslint/recommended",
-//   "plugin:storybook/recommended",
-//   "plugin:storybook/recommended"
-//  ]
-// }
