--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "semi": "off",
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off",
+    "@typescript-eslint/await-thenable": "error",
     "@typescript-eslint/semi": ["warn"],
     "@typescript-eslint/no-empty-interface": [
       "error",
